Atualização geral do projeto no padrão novo
